[gd_scene load_steps=2 format=3 uid="uid://dou4r7t6jga31"]

[ext_resource type="Script" path="res://Prog52a.gd" id="1_us51j"]

[node name="Prog52a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = 23.0
offset_right = 27.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_us51j")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 123.0
offset_bottom = 58.0
text = "Length:"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_top = 39.0
offset_right = 123.0
offset_bottom = 97.0
rotation = 0.00534754
scale = Vector2(0.97754, 1)
text = "Width:"

[node name="lblarea" type="Label" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 183.0
offset_right = 134.0
offset_bottom = 241.0
rotation = 0.00534754
scale = Vector2(1.13612, 1.10537)
text = "Area:"

[node name="lblperim" type="Label" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 241.0
offset_right = 135.0
offset_bottom = 299.0
rotation = 0.00534754
scale = Vector2(1.13612, 1.10537)
text = "Perimeter"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 95.0
offset_top = -1.0
offset_right = 162.063
offset_bottom = 30.0
scale = Vector2(2.72, 1.28)

[node name="LineEdit2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 95.0
offset_top = 46.0
offset_right = 162.062
offset_bottom = 77.0
scale = Vector2(2.72, 1.28)

[node name="btncalc" type="Button" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 341.0
offset_right = 83.0
offset_bottom = 372.0
scale = Vector2(1.61584, 1.56456)
text = "Calculate"

[node name="btnclear" type="Button" parent="."]
layout_mode = 0
offset_left = 171.0
offset_top = 346.0
offset_right = 251.0
offset_bottom = 377.0
scale = Vector2(1.61584, 1.56456)
text = "Clear"

[node name="btnexit" type="Button" parent="."]
layout_mode = 0
offset_left = 348.0
offset_top = 350.0
offset_right = 428.0
offset_bottom = 381.0
scale = Vector2(1.61584, 1.56456)
text = "Exit"

[connection signal="pressed" from="btncalc" to="." method="_on_btncalc_pressed"]
[connection signal="pressed" from="btncalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnclear" to="." method="_on_btnclear_pressed"]
[connection signal="pressed" from="btnexit" to="." method="_on_btnexit_pressed"]
